--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-hot-toast": "^2.4.0",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
+    "styled-components": "^5.3.6",
     "tailwind-merge": "^1.8.0",
     "web-vitals": "^2.1.0"
   },
