--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.6",
     "tailwind-merge": "^1.8.0",
-    "web-vitals": "^2.1.0"
+    "web-vitals": "^2.1.0",
+    "web3": "^1.8.1"
   },
   "scripts": {
     "start": "react-scripts start",
