--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
     "axios": "^1.2.0",
+    "ethers": "^5.7.2",
     "numeral": "^2.0.6",
     "react": "^18.2.0",
     "react-countdown": "^2.3.5",
