--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "@testing-library/user-event": "^13.2.1",
     "axios": "^1.2.0",
     "ethers": "^5.7.2",
+    "gun": "^0.2020.1238",
+    "moralis-v1": "^1.12.0",
     "numeral": "^2.0.6",
     "react": "^18.2.0",
     "react-countdown": "^2.3.5",
